scss/components/_form.scss
#url-form {
  margin: 1rem;
  text-align: center;
  .inputs {
    $border-radius: 5px;
    display: inline-flex;
    justify-content: center;
    border: 1px solid blue;
    border-radius: $border-radius;
    input {
      border: none;
      font-size: 1rem;
      padding: 5px;
    }
    #url-input {
      width: 500px;
      border-radius: $border-radius 0 0 $border-radius;
    }
    #url-id-input {
      width: 100px;
      border-left: 1px solid blue;
      border-radius: 0 $border-radius $border-radius 0;
    }
  }
}

